--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.6.0",
     "react-scroll": "^1.9.3",
     "smooth-scroll": "^16.1.3"
   },
